--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,20 @@
     margin-bottom: 0;
     padding: 0.25em;
   }
+
+.ucb-alert {
+	text-align: center;
+	border-radius: 0;
+	width: 100%;
+	margin: 0;
+}
+
+.ucb-alert-link:link, .ucb-alert-link:visited {
+	text-decoration: underline;
+	text-decoration-color: #6a1a21;
+	-webkit-text-decoration-color: #6a1a21;
+	white-space: nowrap;
+}
   
   header#ucb-header-block {
     background: black;
