wip: base css for person page working

--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -6,8 +6,8 @@
 */
 #}
 
-{{ attach_library('ucb2021_base/ucb-page') }}
-{{ attach_library('ucb2021_base/ucb-person') }}
+{{ attach_library('boulderD9_base/ucb-page') }}
+{{ attach_library('boulderD9_base/ucb-person') }}
 
 {%
 set classes = [
