#18 fixes styling on profile / login pages; #21 fixes CU Boulder homepage header / footer

--- a/templates/layout/page--user.html.twig
+++ b/templates/layout/page--user.html.twig
@@ -47,17 +47,22 @@
 {#{% if ucb_alerts %}#}
 {#  {{ attach_library('ucb2021_base/ucb-alerts') }}#}
 {#{% endif %}#}
-{{ block("page_header", "page.html.twig") }}
-{{ page.highlighted }}
-{{ page.help }}
 
-<main role="main">
-  <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
-  <div class="ucb-above-content-region container">
-    {{ page.above_content }}
-  </div>
-  <div class="layout-content container">
-    {{ page.content }}
-  </div>{# /.layout-content #}
-</main>
-{{ block("page_footer", "page.html.twig") }}
+
+<div class="layout-container ucb-page-container">
+	{{ block("page_header", "page.html.twig") }}
+	{{ page.highlighted }}
+	{{ page.help }}
+	<main role="main">
+		<a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
+		<div class="ucb-above-content-region container">
+			{{ page.above_content }}
+		</div>
+		<div class="layout-content container">
+			<div class="ucb-user-profile-container">
+				{{ page.content }}
+			</div>
+		</div>{# /.layout-content #}
+	</main>
+	{{ block("page_footer", "page.html.twig") }}
+</div>{# /.layout-container #}
