--- a/templates/layout/page--user--login.html.twig
+++ b/templates/layout/page--user--login.html.twig
@@ -46,26 +46,21 @@
 
 {{ attach_library('boulderD9_base/ucb-user-login') }}
 
-{{ block("page_header", "page.html.twig") }}
 
-  {{ page.highlighted }}
-
-  {{ page.help }}
-
-  <main role="main">
-    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
-    <div class="ucb-above-content-region container">
-      {{ page.above_content }}
-    </div>
-    <div class="layout-content container">
-      <div class="ucb-user-login-container">
-        {{ page.content }}
-      </div>
-    </div>{# /.layout-content #}
-
-  </main>
-
+<div class="layout-container ucb-page-container">
+	{{ block("page_header", "page.html.twig") }}
+	{{ page.highlighted }}
+	{{ page.help }}
+	<main role="main">
+		<a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
+		<div class="ucb-above-content-region container">
+			{{ page.above_content }}
+		</div>
+		<div class="layout-content container">
+			<div class="ucb-user-login-container">
+				{{ page.content }}
+			</div>
+		</div>{# /.layout-content #}
+	</main>
+	{{ block("page_footer", "page.html.twig") }}
 </div>{# /.layout-container #}
-{{ block("page_footer", "page.html.twig") }}
-
-
