--- a/templates/block/block--inline-block--text-block.html.twig
+++ b/templates/block/block--inline-block--text-block.html.twig
@@ -13,6 +13,13 @@
   ]
 %}
 
+<div{{attributes.addClass(classes)}}>
+	{{ title_prefix }}
+	{% if label %}
+		<h2{{title_attributes}} style="color: black;">{{ label }}</h2>
+	{% endif %}
+	{{ title_suffix }}
+  </div>
 {% block content %}
 	<div{{attributes.addClass(classes)}}>
 		<div class="card-body container">
