--- a/css/ucb-how-to-page.css
+++ b/css/ucb-how-to-page.css
@@ -1,66 +1,60 @@
 .eachStepDiv {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
 }
 .initialImage {
-    margin-left: auto;
-    margin-bottom: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  max-width: 50%;
 }
 
 .verticalFlex {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    margin-right: 30px;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  width: 100%;
 }
 .stepFlex {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    margin-right: 30px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  margin-right: 30px;
 }
-.horizontalFlex {
-    display: flex;
-    flex-direction: row;
-}
-
-.costDiv {
-    margin-left: auto;
-    font-size: 20px;
-    margin-bottom: 20px;
-
-}
-
 .stepTitle {
-    font-size: 24px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+  font-size: 24px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .stepText {
-    font-size: 20px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+  font-size: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .eachStepImage {
-    width: 100%;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    margin-right: 20px;
+  width: 100%;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-right: 20px;
 }
 
 @media (max-width: 767px) {
-    .initialStepDiv.eachStepDiv {
-        display: flex;
-        flex-direction: column-reverse;
-        margin-bottom: 20px;
-    }
-    .howToStep.eachStepDiv {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 20px;
-    }
+  .initialStepDiv.eachStepDiv {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 20px;
+    margin-right: 10px;
   }
+  .howToStep.eachStepDiv {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    margin-right: 10px;
+  }
+  .initialImage {
+    max-width: 100%;
+    margin-left: 0px;
+  }
+}
