--- a/templates/content/node--how-to-page.html.twig
+++ b/templates/content/node--how-to-page.html.twig
@@ -21,7 +21,7 @@
 	<div class="container">
 		<h1{{title_attributes}}>
 			<span id="titleValue">{{ label }}</span>
-			{% set jsonLD2 = jsonLD2 ~ '"name": "' ~ label|render|striptags ~ '",'%}
+			{% set jsonLD2 = jsonLD2 ~ '"name": ' ~ label|render|striptags|json_encode ~ ','%}
 		</div>
 		<div class="container mb-4">
 
@@ -30,50 +30,46 @@
 					<div class="descriptionBody">
 						{{ content.body }}
 					</div>
-					<div class="horizontalFlex stepText">
-						<div>
-							{% if items in content.field_how_to_materials %}
-								<h2>Materials
-								</h2>
-								{% set matList = '"supply": [' %}
-								<ul>
-									{% for key, item in content.field_how_to_materials if key|first != '#' %}
-										{% set matList = matList ~ '{ "@type": "HowToSupply", "name": "' ~ item|render|striptags|trim ~ '" },' %}
-										<li>{{item|render}}</li>
-									{% endfor %}
-								</ul>
-								{% set matList = matList|slice(0, -1) ~ '],' %}
-							{% endif %}
-
-							{% if items in content.field_how_to_tools %}
-								<h2>Tools
-								</h2>
-								{% set toolList = '"tool": [' %}
-								<ul>
-									{% for key, item in content.field_how_to_tools if key|first != '#' %}
-
-										{% set toolList = toolList ~ '{ "@type": "HowToTool", "name": "' ~ item|render|striptags|trim ~ '" },' %}
-										<li>{{item|render}}</li>
-
-									{% endfor %}
-								</ul>
-								{% set toolList = toolList|slice(0, -1) ~ '],' %}
-							{% endif %}
-						</div>
-						{% if items in content.field_how_to_estimated_costs %}
-							<div class="costDiv">
-									<h2>Estimated Cost:
-											<span id="estimatedCostValue">
-												{% for key, item in content.field_how_to_estimated_costs if key|first != '#' %}
-													{% set estimatedC = '"estimatedCost": { "@type": "MonetaryAmount", "currency": "USD", "value": "' ~item|render|striptags|trim ~'" },'  %}
-													${{item|render}}
-												{% endfor %}
-											</span>
-										</h2>
-							</div>
+					<div class="stepText">
+						{% if items in content.field_how_to_materials %}
+							<h2>Materials
+							</h2>
+							{% set matList = '"supply": [' %}
+							<ul>
+								{% for key, item in content.field_how_to_materials if key|first != '#' %}
+									{% set matList = matList ~ '{ "@type": "HowToSupply", "name": ' ~ item|render|striptags|trim|json_encode ~ ' },' %}
+									<li>{{item|render}}</li>
+								{% endfor %}
+							</ul>
+							{% set matList = matList|slice(0, -1) ~ '],' %}
 						{% endif %}
 
+						{% if items in content.field_how_to_tools %}
+							<h2>Tools
+							</h2>
+							{% set toolList = '"tool": [' %}
+							<ul>
+								{% for key, item in content.field_how_to_tools if key|first != '#' %}
+
+									{% set toolList = toolList ~ '{ "@type": "HowToTool", "name": ' ~ item|render|striptags|trim|json_encode ~ ' },' %}
+									<li>{{item|render}}</li>
+
+								{% endfor %}
+							</ul>
+							{% set toolList = toolList|slice(0, -1) ~ '],' %}
+						{% endif %}
+						{% if items in content.field_how_to_estimated_costs %}
+							<h2>Estimated Cost:
+								<span id="estimatedCostValue">
+									{% for key, item in content.field_how_to_estimated_costs if key|first != '#' %}
+										{% set estimatedC = '"estimatedCost": { "@type": "MonetaryAmount", "currency": "USD", "value": ' ~item|render|striptags|trim|json_encode ~' },'  %}
+										${{item|render}}
+									{% endfor %}
+								</span>
+							</h2>
+						{% endif %}
 					</div>
+
 				</div>
 				<div class="initialImage">
 					{% for key, item in node.field_how_to_initial_image if key|first != '#' %}
@@ -88,21 +84,21 @@
 					<div class="eachStepImage">
 						{{item.entity.field_how_to_step_image|view}}
 						{% set imgURL =  file_url(item.entity.field_how_to_step_image.entity.field_media_image.entity.fileuri) %}
-							{% set stepImage = '"image": { "@type": "ImageObject","url": "' ~ imgURL ~ '", "height": "406", "width": "305"}' %}
+						{% set stepImage = '"image": { "@type": "ImageObject","url": "' ~ imgURL ~ '", "height": "406", "width": "305"}' %}
 					</div>
 					<div class="eachStepContentDiv stepFlex">
 						{% set stepList = stepList ~ '{"@type": "HowToStep",' %}
 						<h1 id="step{{key}}">{{item.entity.field_how_to_step_title|view}}</h1>
 						{% set stepList = stepList ~ '"url": "' ~ url("<current>")|render ~ '#step' ~ key ~'",' %}
-						{% set stepList = stepList ~ '"name": "' ~ item.entity.field_how_to_step_title.value|render|striptags|trim ~ '",' %}
-					
+						{% set stepList = stepList ~ '"name": ' ~ item.entity.field_how_to_step_title.value|render|striptags|trim|json_encode ~ ',' %}
+
 
 						{% set stepList = stepList ~ '"itemListElement": [' %}
 						<ul>
 							{% for key2, item2 in item.entity.field_how_to_sub_steps if key2|first != '#' %}
 
 								<li>{{item2|view}}</li>
-								{% set stepList = stepList ~  '{ "@type": "HowToDirection", "text": "' ~ item2.value|render|striptags|trim ~ '"},' %}
+								{% set stepList = stepList ~  '{ "@type": "HowToDirection", "text": ' ~ item2.value|render|striptags|trim|json_encode ~ '},' %}
 							{% endfor %}
 						</ul>
 						{% set stepList = stepList|slice(0,-1) ~ '],' %}
