--- a/templates/block/block--inline-block--expandable-content.html.twig
+++ b/templates/block/block--inline-block--expandable-content.html.twig
@@ -3,34 +3,33 @@
  * @file
  * Theme to implement the expandable content (accordion, horizontal/vertical tabs)
  *
- * Created by Joshua Nicholson on 1/27/22
-*
+ * Created by Joshua Nicholson on 08/09/22
 #}
 
 {{ attach_library('boulderD9_base/ucb-expandable-content') }}
 
 {%
   set classes = [
-    'content-block',
-    'content-blcok--type--' ~ block.bundle|clean_class,
-    view_mode ? 'content-block--view-mode--' ~ view_mode|clean_class
+    'block',
+    'block-' ~ configuration.provider|clean_class,
+    'block-' ~ plugin_id|clean_class,
+    bundle ? 'block--type-' ~ bundle|clean_class,
+    view_mode ? 'block--view-mode-' ~ view_mode|clean_class
   ]
 %}
 
 {% set layoutSelection = content['#block_content'].field_expandable_content_type.value %}
 
 
-<div{{attributes.addClass(classes)}}>
-	{{ title_prefix }}
-	{% if label %}
-		<h2{{title_attributes}} style="color: black;">{{ label }}</h2>
-	{% endif %}
-	{{ title_suffix }}
-</div>
 {% block content %}
-	<!-- Accordion -->
-	{% if layoutSelection == 0 %}
-		<div{{attributes.addClass(classes)}}>
+	<div{{attributes.addClass(classes)}}>
+		{{ title_prefix }}
+		{% if label %}
+			<h2{{title_attributes}} style="color: black;">{{ label }}</h2>
+		{% endif %}
+		{{ title_suffix }}
+		<!-- Accordion -->
+		{% if layoutSelection == 0 %}
 			<div class="accordion accordion-flush" id="ucb-accordion{{ content['#block_content'].id() }}">
 				{% for key, item in content['#block_content'].field_expandable_content_copy if key|first != '#' %}
 					<div class="accordion-item">
@@ -41,90 +40,36 @@
 						</h2>
 						<div id="ucb-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" class="accordion-collapse collapse" aria-labelledby="ucb-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}" data-bs-parent="#ucb-accordion{{ content['#block_content'].id() }}">
 							<div class="accordion-body">
-								{{ item.entity.field_expandable_content_text|view }}
+								{{ item.entity.field_expandable_content_body|view }}
 							</div>
 						</div>
 					</div>
 				{% endfor %}
 			</div>
-		</div>
-		<!-- Accordion ends -->
-		<!-- horizontal tab/accordion -->
-	{% elseif layoutSelection == 1 %}
-		<!-- horizontal tab/accordion tabs -->
-		<ul class="nav nav-tabs justify-content-center" id="ucb-horizontal-tabs{{ content['#block_content'].id() }}" role="tablist">
-			{% for key, item in content['#block_content'].field_expandable_content_copy if key|first != '#' %}
-				{% if loop.first == true %}
-					<li class="nav-item" role="presentation">
-						<button class="nav-link horizontal-tab-link active" id="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab" data-bs-toggle="tab" data-bs-target="#ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" type="button" role="tab" aria-controls="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" aria-selected="true">{{ item.entity.field_expandable_content_title|view }}</button>
-					</li>
-				{% else %}
-					<li class="nav-item" role="presentation">
-						<button class="nav-link horizontal-tab-link" id="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab" data-bs-toggle="tab" data-bs-target="#ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" type="button" role="tab" aria-controls="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" aria-selected="true">{{ item.entity.field_expandable_content_title|view }}</button>
-					</li>
-				{% endif %}
-			{% endfor %}
-		</ul>
-		<!-- horizontal tab/accordion tabs ends -->
-		<!-- horizontal tab/accordion content -->
-		<div id="ucb-tab-accordion{{ content['#block_content'].id() }}" class="tab-content accordion-flush" role="tablist">
-			{% for key, item in content['#block_content'].field_expandable_content_copy if key|first != '#' %}
-				{% if loop.first == true %}
-					<div class="tab-pane fade show active accordion-item" id="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" role="tabpanel" aria-labelledby="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab">
-						<div class="horizontal-accordion-tab" role="tab" id="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
-							<h5 class="mb-0">
-								<button class="accordion-button collapsed" data-bs-toggle="collapse" href="#ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" aria-expanded="true" aria-controls="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}">
-									{{ item.entity.field_expandable_content_title|view }}
-								</a>
-							</h5>
-						</div>
-						<div id="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" class="collapse" data-bs-parent="#ucb-tab-accordion{{ content['#block_content'].id() }}" role="tabpanel" aria-labelledby="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
-							<div class="card-body">
-								{{ item.entity.field_expandable_content_text|view }}
-							</div>
-						</div>
-					</div>
-				{% else %}
-					<div class="tab-pane fade accordion-item" id="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" role="tabpanel" aria-labelledby="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab">
-						<div class="horizontal-accordion-tab" role="tab" id="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
-							<h5 class="mb-0">
-								<button class="accordion-button collapsed" data-bs-toggle="collapse" href="#ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" aria-expanded="false" aria-controls="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}">
-									{{ item.entity.field_expandable_content_title|view }}
-								</a>
-							</h5>
-						</div>
-						<div id="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" class="collapse" data-bs-parent="#ucb-tab-accordion{{ content['#block_content'].id() }}" role="tabpanel" aria-labelledby="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
-							<div class="card-body">
-								{{ item.entity.field_expandable_content_text|view }}
-							</div>
-						</div>
-					</div>
-					<!-- horizontal tab/accordion content ends -->
-				{% endif %}
-			{% endfor %}
-		</div>
-		<!-- horizontal tab/accordion ends -->
-		<!-- vertical tab/accordion -->
-	{% else %}
-		<div
-			class="vertical-tab-accordion d-flex align-items-start">
-			<!-- vertical tab/accordion tabs -->
-			<div class="vertical-tabs nav flex-column nav-pills" id="ucb-vertical-tabs{{ content['#block_content'].id() }}" role="tablist" aria-orientation="vertical">
+			<!-- Accordion ends -->
+			<!-- horizontal tab/accordion -->
+		{% elseif layoutSelection == 1 %}
+			<!-- horizontal tab/accordion tabs -->
+			<ul class="nav nav-tabs justify-content-center" id="ucb-horizontal-tabs{{ content['#block_content'].id() }}" role="tablist">
 				{% for key, item in content['#block_content'].field_expandable_content_copy if key|first != '#' %}
 					{% if loop.first == true %}
-						<button class="nav-link vertical-tab-link active" id="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab" data-bs-toggle="pill" data-bs-target="#ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" type="button" role="tab" aria-controls="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" aria-selected="true">{{ item.entity.field_expandable_content_title|view }}</button>
+						<li class="nav-item" role="presentation">
+							<button class="nav-link horizontal-tab-link active" id="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab" data-bs-toggle="tab" data-bs-target="#ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" type="button" role="tab" aria-controls="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" aria-selected="true">{{ item.entity.field_expandable_content_title|view }}</button>
+						</li>
 					{% else %}
-						<button class="nav-link vertical-tab-link" id="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab" data-bs-toggle="pill" data-bs-target="#ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" type="button" role="tab" aria-controls="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" aria-selected="true">{{ item.entity.field_expandable_content_title|view }}</button>
+						<li class="nav-item" role="presentation">
+							<button class="nav-link horizontal-tab-link" id="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab" data-bs-toggle="tab" data-bs-target="#ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" type="button" role="tab" aria-controls="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" aria-selected="true">{{ item.entity.field_expandable_content_title|view }}</button>
+						</li>
 					{% endif %}
 				{% endfor %}
-			</div>
-			<!-- vertical tab/accordion tabs ends -->
-			<!-- vertical tab/accordion content -->
-			<div id="ucb-tab-accordion{{ content['#block_content'].id() }}" class="tab-content vertical-tab-content accordion-flush" role="tablist">
+			</ul>
+			<!-- horizontal tab/accordion tabs ends -->
+			<!-- horizontal tab/accordion content -->
+			<div id="ucb-tab-accordion{{ content['#block_content'].id() }}" class="tab-content accordion-flush" role="tablist">
 				{% for key, item in content['#block_content'].field_expandable_content_copy if key|first != '#' %}
 					{% if loop.first == true %}
-						<div class="accordion-item tab-pane fade show active" id="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" role="tabpanel" aria-labelledby="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab">
-							<div class="vertical-accordion-tab" role="tab" id="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
+						<div class="tab-pane fade show active accordion-item" id="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" role="tabpanel" aria-labelledby="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab">
+							<div class="horizontal-accordion-tab" role="tab" id="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
 								<h5 class="mb-0">
 									<button class="accordion-button collapsed" data-bs-toggle="collapse" href="#ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" aria-expanded="true" aria-controls="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}">
 										{{ item.entity.field_expandable_content_title|view }}
@@ -133,13 +78,13 @@
 							</div>
 							<div id="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" class="collapse" data-bs-parent="#ucb-tab-accordion{{ content['#block_content'].id() }}" role="tabpanel" aria-labelledby="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
 								<div class="card-body">
-									{{ item.entity.field_expandable_content_text|view }}
+									{{ item.entity.field_expandable_content_body|view }}
 								</div>
 							</div>
 						</div>
 					{% else %}
-						<div class="accordion-item tab-pane fade" id="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" role="tabpanel" aria-labelledby="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab">
-							<div class="vertical-accordion-tab" role="tab" id="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
+						<div class="tab-pane fade accordion-item" id="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" role="tabpanel" aria-labelledby="ucb-horizontal-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab">
+							<div class="horizontal-accordion-tab" role="tab" id="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
 								<h5 class="mb-0">
 									<button class="accordion-button collapsed" data-bs-toggle="collapse" href="#ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" aria-expanded="false" aria-controls="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}">
 										{{ item.entity.field_expandable_content_title|view }}
@@ -148,14 +93,68 @@
 							</div>
 							<div id="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" class="collapse" data-bs-parent="#ucb-tab-accordion{{ content['#block_content'].id() }}" role="tabpanel" aria-labelledby="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
 								<div class="card-body">
-									{{ item.entity.field_expandable_content_text|view }}
+									{{ item.entity.field_expandable_content_body|view }}
 								</div>
 							</div>
 						</div>
+						<!-- horizontal tab/accordion content ends -->
 					{% endif %}
 				{% endfor %}
 			</div>
-			<!-- vertical tab/accordion content ends -->
-		</div>
-	{% endif %}
+			<!-- horizontal tab/accordion ends -->
+			<!-- vertical tab/accordion -->
+		{% else %}
+			<div
+				class="vertical-tab-accordion d-flex align-items-start">
+				<!-- vertical tab/accordion tabs -->
+				<div class="vertical-tabs nav flex-column nav-pills" id="ucb-vertical-tabs{{ content['#block_content'].id() }}" role="tablist" aria-orientation="vertical">
+					{% for key, item in content['#block_content'].field_expandable_content_copy if key|first != '#' %}
+						{% if loop.first == true %}
+							<button class="nav-link vertical-tab-link active" id="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab" data-bs-toggle="pill" data-bs-target="#ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" type="button" role="tab" aria-controls="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" aria-selected="true">{{ item.entity.field_expandable_content_title|view }}</button>
+						{% else %}
+							<button class="nav-link vertical-tab-link" id="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab" data-bs-toggle="pill" data-bs-target="#ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" type="button" role="tab" aria-controls="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" aria-selected="true">{{ item.entity.field_expandable_content_title|view }}</button>
+						{% endif %}
+					{% endfor %}
+				</div>
+				<!-- vertical tab/accordion tabs ends -->
+				<!-- vertical tab/accordion content -->
+				<div id="ucb-tab-accordion{{ content['#block_content'].id() }}" class="tab-content vertical-tab-content accordion-flush" role="tablist">
+					{% for key, item in content['#block_content'].field_expandable_content_copy if key|first != '#' %}
+						{% if loop.first == true %}
+							<div class="accordion-item tab-pane fade show active" id="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" role="tabpanel" aria-labelledby="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab">
+								<div class="vertical-accordion-tab" role="tab" id="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
+									<h5 class="mb-0">
+										<button class="accordion-button collapsed" data-bs-toggle="collapse" href="#ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" aria-expanded="true" aria-controls="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}">
+											{{ item.entity.field_expandable_content_title|view }}
+										</a>
+									</h5>
+								</div>
+								<div id="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" class="collapse" data-bs-parent="#ucb-tab-accordion{{ content['#block_content'].id() }}" role="tabpanel" aria-labelledby="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
+									<div class="card-body">
+										{{ item.entity.field_expandable_content_body|view }}
+									</div>
+								</div>
+							</div>
+						{% else %}
+							<div class="accordion-item tab-pane fade" id="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}" role="tabpanel" aria-labelledby="ucb-vertical-tabs{{ content['#block_content'].id() }}-title{{ loop.index }}-tab">
+								<div class="vertical-accordion-tab" role="tab" id="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
+									<h5 class="mb-0">
+										<button class="accordion-button collapsed" data-bs-toggle="collapse" href="#ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" aria-expanded="false" aria-controls="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}">
+											{{ item.entity.field_expandable_content_title|view }}
+										</a>
+									</h5>
+								</div>
+								<div id="ucb-tab-accordion{{ content['#block_content'].id() }}-content{{ loop.index }}" class="collapse" data-bs-parent="#ucb-tab-accordion{{ content['#block_content'].id() }}" role="tabpanel" aria-labelledby="ucb-tab-accordion{{ content['#block_content'].id() }}-title{{ loop.index }}">
+									<div class="card-body">
+										{{ item.entity.field_expandable_content_body|view }}
+									</div>
+								</div>
+							</div>
+						{% endif %}
+					{% endfor %}
+				</div>
+				<!-- vertical tab/accordion content ends -->
+			</div>
+		{% endif %}
+	</div>
 {% endblock content %}
