--- a/templates/block/block--inline-block--text-block.html.twig
+++ b/templates/block/block--inline-block--text-block.html.twig
@@ -1,25 +1,27 @@
 {#
 /**
  * @file
- * Theme to implement a Text block Paragraph
+ * Theme to implement the text block
  *
+ * Created by Joshua Nicholson on 08/09/22
+*
 #}
+
+{{ attach_library('boulderD9_base/ucb-text-block') }}
+
+
 {%
   set classes = [
-    'content-block',
-    'content-blcok--type--' ~ block.bundle|clean_class,
-    view_mode ? 'content-block--view-mode--' ~ view_mode|clean_class,
+	'block',
+    'block-' ~ configuration.provider|clean_class,
+    'block-' ~ plugin_id|clean_class,
+    bundle ? 'block--type-' ~ bundle|clean_class,
+    view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
     'card'
   ]
 %}
 
-<div{{attributes.addClass(classes)}}>
-	{{ title_prefix }}
-	{% if label %}
-		<h2{{title_attributes}} style="color: black;">{{ label }}</h2>
-	{% endif %}
-	{{ title_suffix }}
-  </div>
+
 {% block content %}
 	<div{{attributes.addClass(classes)}}>
 		<div class="card-body container">
