--- a/templates/paragraphs/paragraph--slider-image.html.twig
+++ b/templates/paragraphs/paragraph--slider-image.html.twig
@@ -16,8 +16,8 @@
 {% block paragraph %}
 	{% block content %}
     <div class="slide-image-container">
-      {% if paragraph.field_slide_link.value is not empty %}
-        <a href="{{ paragraph.field_slide_link.value }}">
+      {% if paragraph.field_slide_link.0.url is not empty %}
+        <a href="{{ paragraph.field_slide_link.0.url }}">
           {{ content.field_slide_image|render }}
         </a>
       {% else %}
@@ -30,8 +30,8 @@
 				{% if paragraph.field_slide_image_text is not empty %}
 					<span>
 						<h3>{{ content.field_slide_title|render|striptags|trim }}
-							{% if paragraph.field_slide_link.value is not empty %}
-								<a href="{{ paragraph.field_slide_link.value }}" class="slide-link">
+							{% if paragraph.field_slide_link.0.url is not empty %}
+								<a href="{{ paragraph.field_slide_link.0.url }}" class="slide-link">
 									<i class="fa fa-external-link-alt"></i>
 								</a>
 							{% endif %}
