--- a/templates/content/node--ucb-article.html.twig
+++ b/templates/content/node--ucb-article.html.twig
@@ -8,7 +8,7 @@
 
 {{ attach_library('boulderD9_base/ucb-page') }}
 {{ attach_library('boulderD9_base/ucb-article') }}
-{{ attach_library('ucb2021_base/ucb-related-articles') }}
+{{ attach_library('boulderD9_base/ucb-related-articles') }}
 
 {%
 set classes = [
@@ -34,6 +34,16 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 {% else %} 
   {% set social_share_class = "social-share-none" %}
 {% endif %}
+
+{% set myTags %}
+    {{ content.field_ucb_article_tags }}
+{% endset %}
+{% set myCats %}
+    {{ content.field_ucb_article_categories }}
+{% endset %}
+{% set showRelated %}
+    {{content.field_ucb_related_articles_parag.0}}
+{% endset %}
 
 {#Dummy variable to ensure that all content tags are set for caching purposes#}
 {% set content_render = content|render %}
@@ -87,7 +97,7 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
             </div>
         {% endif %}
         {# TO DO -- Related Articles Block #}
-        <div class="ucb-related-articles-block" data-catsjson="{{content.field_ucb_article_categories| json_encode(constant('JSON_PRETTY_PRINT'))}}" data-tagsjson="{{ content.field_ucb_article_tags| json_encode(constant('JSON_PRETTY_PRINT')) }}"data-relatedshown="{{showRelated|striptags|trim}}"data-tags="{{myTags|render|striptags|trim|replace({"\n": "", "\r": "", "\t": ""})}}"data-cats="{{myCats|render|striptags|trim|replace({"\n": "", "\r": "", "\t": ""})}}">
+        <div class="ucb-related-articles-block" data-catsjson="{{content.field_ucb_article_categories| json_encode(constant('JSON_PRETTY_PRINT'))}}" data-tagsjson="{{ content.field_ucb_article_tags| json_encode(constant('JSON_PRETTY_PRINT')) }}" data-relatedshown="{{showRelated|striptags|trim}}" data-tags="{{myTags|render|striptags|trim|replace({"\n": "", "\r": "", "\t": ""})}}"data-cats="{{myCats|render|striptags|trim|replace({"\n": "", "\r": "", "\t": ""})}}">
             {{content.field_ucb_related_articles_parag}}
     </div>
     </div>
